--- a/mybib.bib
+++ b/mybib.bib
@@ -1,5 +1,4 @@
 @book{A21,
-  shorthand = {A21},
   title={Perverse Sheaves and Applications to Representation Theory},
   author={Achar, P.N.},
   isbn={9781470455972},
@@ -11,7 +10,6 @@
 }
 
 @misc{Artin-96,
-  shorthand = {Artin-96},
   author = {Artin},
   year = {1996},
   title        = {Deformation Theory},
@@ -19,7 +17,6 @@
 }
 
 @misc{AG-17,
-      shorthand = {AG-17},
       title={The category of singularities as a crystal and global Springer fibers}, 
       author={D. Arinkin and D. Gaitsgory},
       year={2017},
@@ -54,8 +51,7 @@
   url = {https://people.math.harvard.edu/~gaitsgde/grad_2009/Tomas.pdf}
 }
 
-@misc{BZN-15,
-      shorthand = {BZN-15},
+@misc{BZN15,
       title={The Character Theory of a Complex Group}, 
       author={David Ben-Zvi and David Nadler},
       year={2015},
@@ -65,12 +61,18 @@
       url = {https://arxiv.org/abs/0904.1247}
 }
 
-@misc{cis-1,
-  shorthand    = {Cis-1},
-  title        = {"Higher Categories and Homotopical Algebra"}
+@book{Cis19, 
+  place={Cambridge}, 
+  series={Cambridge Studies in Advanced Mathematics}, 
+  title={Higher Categories and Homotopical Algebra}, 
+  DOI={10.1017/9781108588737}, 
+  publisher={Cambridge University Press}, 
+  author={Cisinski, Denis-Charles}, 
+  year={2019}, 
+  collection={Cambridge Studies in Advanced Mathematics}
 }
 
-@article{D-83,
+@article{D83,
   title={Two-Dimensional l-Adic Representations of the Fundamental Group of a Curve Over a Finite Field and Automorphic Forms on GL(2)},
   author={Drinfeld, Vladmir},
   journal={American Journal of Mathematics},
@@ -79,15 +81,14 @@
   pages={85}
 }
 
-@misc{F-03,
+@misc{F03,
       title={Recent Advances in the Langlands Program}, 
-      author={Edward Frenkel},
+      author={Frenkel, Edward},
       year={2003},
       url = {https://arxiv.org/abs/math/0303074}
 }
 
-@misc{FG-06,
-  shorthand = {FG-06},
+@misc{FG06,
 
   doi = {10.48550/ARXIV.MATH/0508382},
   
@@ -102,10 +103,9 @@
   year = {2006}
 }
 
-@misc{GR-14,
-  shorthand = {GR-14},
+@misc{GR14,
   title={Crystals and D-modules}, 
-  author={Dennis Gaitsgory and Nick Rozenblyum},
+  author={Gaitsgory, Dennis and Rozenblyum, Nick},
   year={2014},
   archivePrefix={arXiv},
   url = {https://arxiv.org/abs/1111.2087}
@@ -119,7 +119,6 @@
 }
 
 @book{HTT,
-  shorthand = {H.T.T.},
   title={D-modules, perverse sheaves, and representation theory},
   author={Hotta, Ryoshi and Takeuchi, Kiyoshi and Tanisaki, Toshiyuki},
   volume={236},
@@ -128,18 +127,20 @@
 }
 
 @misc{KW,
-  shorthand = {KW},
   author       = {Kiehl, Reinhardt and Weissauer, Rainer},
   title        = {Weil Conjectures, Perverse Sheaves and l-adic Fourier Transform}
 }
 
-@misc{lurie-htt,
-  shorthand = {Lurie-HTT},
-  title = "{Higher Topos Theory}"
+@misc{lurie-HTT,
+      title={Higher Topos Theory}, 
+      author={Lurie, Jacob},
+      year={2008},
+      eprint={math/0608040},
+      archivePrefix={arXiv},
+      primaryClass={math.CT}
 }
 
 @book{milne, 
-  shorthand = {M17},
   place={Cambridge}, 
   series={Cambridge Studies in Advanced Mathematics}, 
   title={Algebraic Groups: The Theory of Group Schemes of Finite Type over a Field}, 
@@ -150,16 +151,7 @@
   collection={Cambridge Studies in Advanced Mathematics}
 }
 
-@misc{stacks-project,
-    shorthand    = {Stacks},
-    author       = {The {Stacks Project Authors}},
-    title        = {\textit{Stacks Project}},
-    howpublished = {\url{https://stacks.math.columbia.edu}},
-    year         = {2018},
-  }
-
-@misc{Ras-20,
-  shorthand = {Ras-20},
+@misc{Ras20,
 
   doi = {10.48550/ARXIV.2002.01394},
   
@@ -175,7 +167,7 @@
 }
 
 
-@misc{RY-22,
+@misc{RY22,
   shorthand = {RY-22},
 
   doi = {10.48550/ARXIV.2203.13885},
@@ -191,12 +183,31 @@
   year = {2022}
 }
 
-@misc{toen-09,
-  shorthand    = {Toen-09},
-  title        = {"Simplicial presheaves and derived algebraic geometry"}
+@misc{stacks,
+    shorthand    = {Stacks},
+    author       = {The {Stacks Project Authors}},
+    title        = {\textit{Stacks Project}},
+    howpublished = {\url{https://stacks.math.columbia.edu}},
+    year         = {2018},
+  }
+
+@incollection{T10,
+  TITLE = {{Simplicial presheaves and derived algebraic geometry.}},
+  AUTHOR = {Toen, Bertrand},
+  URL = {https://hal.science/hal-00772850},
+  BOOKTITLE = {{Simplicial Methods for Operads and Algebraic Geometry}},
+  PUBLISHER = {{Springer Basel}},
+  SERIES = {Advanced Courses in Mathematics - CRM Barcelona},
+  PAGES = {119-185},
+  YEAR = {2010},
+  MONTH = Jan,
+  DOI = {10.1007/978-3-0348-0052-5},
+  PDF = {https://hal.science/hal-00772850v2/file/crm-2009.pdf},
+  HAL_ID = {hal-00772850},
+  HAL_VERSION = {v2}
 }
 
-@misc{Zhu-16,
+@misc{Zhu16,
       title={An introduction to affine Grassmannians and the geometric Satake equivalence}, 
       author={Xinwen Zhu},
       year={2016},
